@startuml modelo-dominio-spkr

title Modelo de Dominio - SPKR

skinparam classAttributeIconSize 0
skinparam defaultFontName Segoe UI
skinparam shadowing false
skinparam class {
    BackgroundColor<<Controller>> #C8E6C9
    BackgroundColor<<Entity>> #BBDEFB
    BackgroundColor<<Catalog>> #FFE0B2
    BackgroundColor<<DTO>> #FFF9C4
    BorderColor #546E7A
    ArrowColor #37474F
}

' =====================================================
' CONTROLADOR
' =====================================================

class SpkrApp <<Controller>> {
    - catalogoUsuarios: CatalogoUsuarios
    - catalogoCursos: CatalogoCursos
    - usuarioActual: Usuario
    - cursoActivo: Curso
    - progresoActual: Progreso
    - estrategiaActual: EstrategiaAprendizaje
}

enum TipoPregunta {
    TEST
    TRADUCCION
    HUECOS
}

enum AccionIniciarCurso {
    SIN_LECCIONES
    CONTINUAR_PROGRESO
    CURSO_COMPLETADO
    SELECCIONAR_ESTRATEGIA
}

' =====================================================
' CATALOGOS (Acceso a Datos)
' =====================================================

class CatalogoUsuarios <<Catalog>> {
    + addUsuario(usuario): void
    + getUsuario(nombre): Usuario
    + existeUsuario(nombre): boolean
    + validarCredenciales(): boolean
}

class CatalogoCursos <<Catalog>> {
    + addCurso(curso): void
    + getCurso(titulo): Curso
    + existeCurso(titulo): boolean
}

' =====================================================
' MODELO (Entidades)
' =====================================================

class Usuario <<Entity>> {
    - nombreUsuario: String
    - email: String
    - password: String
    - fechaRegistro: Date
}

class Estadisticas <<Entity>> {
    - tiempoTotalUso: int
    - rachaActual: int
    - mejorRacha: int
    - ejerciciosCompletados: int
}

class Biblioteca <<Entity>> {
}

class Curso <<Entity>> {
    - titulo: String
    - descripcion: String
    - idioma: String
}

class Leccion <<Entity>> {
    - nombre: String
    - descripcion: String
    - orden: int
}

abstract class Pregunta <<Entity>> {
    - enunciado: String
    - orden: int
    + {abstract} validarRespuesta(): boolean
}

class PreguntaTest <<Entity>> {
    - opcionCorrecta: String
    - opcionIncorrecta1: String
    - opcionIncorrecta2: String
}

class PreguntaTraduccion <<Entity>> {
    - respuestaCorrecta: String
}

class PreguntaHuecos <<Entity>> {
    - fraseCompleta: String
    - palabraOculta: String
}

class Progreso <<Entity>> {
    - preguntaActual: int
    - aciertos: int
    - errores: int
    - estrategia: String
    - tiempoSegundos: int
    - completado: boolean
}

class ErrorFrecuente <<Entity>> {
    - vecesFallada: int
    - fechaUltimoError: Date
}

class ResultadoRespuesta <<DTO>> {
    - correcta: boolean
    - yaContada: boolean
    - respuestaCorrecta: String
    - aciertosActuales: int
    - erroresActuales: int
}

' =====================================================
' RELACIONES
' =====================================================

' Controlador - Catalogos
SpkrApp *-- CatalogoUsuarios
SpkrApp *-- CatalogoCursos
SpkrApp +-- TipoPregunta
SpkrApp +-- AccionIniciarCurso
SpkrApp ..> ResultadoRespuesta : crea

' Catalogos - Entidades
CatalogoUsuarios --> Usuario : gestiona
CatalogoCursos --> Curso : gestiona

' Usuario - Composiciones
Usuario "1" *-- "1" Estadisticas
Usuario "1" *-- "1" Biblioteca
Usuario "1" *-- "*" Progreso
Usuario "1" *-- "*" ErrorFrecuente

' Contenido
Biblioteca "*" o-- "*" Curso
Curso "1" *-- "*" Leccion
Leccion "1" *-- "*" Pregunta

' Herencia
Pregunta <|-- PreguntaTest
Pregunta <|-- PreguntaTraduccion
Pregunta <|-- PreguntaHuecos

' Referencias
Progreso "*" --> "1" Curso
ErrorFrecuente "*" --> "1" Pregunta

@enduml
